@@ -1,3 +1,6 @@
+2009-06-18
+- patch by Christian Ruppert, configure option for battery
+
 2009-06-14
 - revert r78, fixed issue 100
 
